# xpchat

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake.sh
src/: main.cpp
xpchat/: CMakeLists.txt  build.sh  mingw-w64-x86_64.cmake
xpchat-lib/: CMakeLists.txt
xpchat-lib/src/: chat_protocol.cpp  chat_protocol.h
xpchat-lib/src/xpchat/: chat_protocol.h  client.h  peer.h  server.h  socket.h
xpchat-server/: CMakeLists.txt  build.sh
xpchat-server/src/: central.cpp  central.h  client_list.h  main.cpp  peer_list.h  server.cpp  server.h  server_list.cpp  server_list.h
xpchat/src/: central.cpp  central.h  chat.cpp  chat.h  main.cpp
